--- a/main.html
+++ b/main.html
@@ -9,8 +9,15 @@
 <body>
     <!-- the entire body must be written by student -->
     <div id="outer">
+		
         <div id="middle">
-            <div id="inner"></div>
+            <div id="inner">
+				<div id="green">
+					<div id="blue">
+						<div id="voilet"></div>
+					</div>
+				</div>
+			</div>
         </div>
     </div>
     <script type="text/javascript" src="./script.js">
